feedback:fix(css/_street_view_switch): add inline margin to prevent focus state overflow

--- a/assets/css/map/controls/_street_view_switch.scss
+++ b/assets/css/map/controls/_street_view_switch.scss
@@ -49,7 +49,7 @@
 
     // Remove Negative Margins so shrinkwrap works
     .form-check-input {
-      margin-left: 0;
+      margin-inline: 4px;
     }
   }
   // #endregion
